--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
@@ -29,8 +29,7 @@
         <label>Description</label>
         <input type="text" id="Description" class="form-control" placeholder="Description" style="width:300px;">
     </div>
-   
     <div style="float: left;  margin: 30px 8px;">
-        <button type="button" style="background-color: #B0EB30; width:100px; " id="btnUpdateStock">save</button>
+        <button type="button" class="saveButton" style="padding:4px 25px;" id="btnUpdateStock">save</button>
     </div>
 </div>
