--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterPanel.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterPanel.cshtml
@@ -38,6 +38,6 @@
         @Html.DropDownList("ddlUnit", (new SelectList(Model.UnitList, "Unit_Id", "Unit_Name")), "Select Unit", new { @class = "clsUnit_Id form-control" })
     </div>
     <div style="float: left;  margin: 30px 8px;">
-        <button type="button" class="saveButton" style="padding: 1px 20px" id="btnFind">Find</button>
+        <button type="button" class="saveButton" style="padding: 1px 20px; background-color:#337ab7;" id="btnFind">Find</button>
     </div>
 </div>
