--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
                             <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
-                            <li>@Html.ActionLink("Customer", "CustomerIndex", "Customer")</li>
-                            <li>@Html.ActionLink("Supplier", "SupplierIndex", "Supplier")</li>
+                            @*<li>@Html.ActionLink("Customer", "CustomerIndex", "Customer")</li>
+                            <li>@Html.ActionLink("Supplier", "SupplierIndex", "Supplier")</li>*@
                         </ul>
                     </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
