--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
@@ -5,7 +5,7 @@
         <form action="">
             <input type="radio" id="rdTransfer" name="rdbutton" value="3" checked="checked">Transfer<br>
             <input type="radio" id="rdInput" name="rdbutton" value="1">Input<br>
-            <input type="radio" id="rdOutput" name="rdbutton" value="2">Output             
+            <input type="radio" id="rdOutput" name="rdbutton" value="2">Issue             
         </form>
     </div> 
     <div style="float: left;  margin: 0px 8px;">
