--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
@@ -8,7 +8,8 @@
             <th style="text-align:left">Category</th>
             <th style="text-align:left">Color</th>
             <th style="text-align:left">Material</th>
-            <th style="text-align:left">Criticality</th>            
+            <th style="text-align:left">Criticality</th> 
+            <th style="text-align:left">Min Quantity</th> 
             <th style="text-align:left">Unit</th>
             <th class="action-col"></th>  
         </tr>
@@ -43,6 +44,9 @@
                     </td>  
                     <td title="@data.Criticality_Name" style="width:90%">
                         @data.Criticality_Name
+                    </td> 
+                    <td title="@data.Min_Quantity" style="width:90%">
+                        @data.Min_Quantity
                     </td>  
                     <td title="@data.Unit_Name" style="width:90%">
                         @data.Unit_Name
