--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -38,6 +38,12 @@
                         </ul>
                     </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Report<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>                            
+                        </ul>
+                    </li>   
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
