--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Report<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>                            
+                            @*<li>@Html.ActionLink("Min Balance", "ReportIndex", "Report")</li>*@                            
                         </ul>
                     </li>   
                 </ul>
