--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -59,7 +59,9 @@
                         <input type="text" id="Quantity" class="form-control" placeholder="QTY" style="width:60px;">
                     </td>                    
                     <td style="width:2%">
-                        <a >show</a>
+                        <a href="@Url.Action("StockPartDetailReport", "Report", new { Part_Id = Convert.ToString(data.Part_Id) })" class="clsEditbudgetsummary">  
+                            <span class="glyphicon glyphicon-pencil" style="padding-left:10px"></span>
+                        </a>
                     </td>
                  </tr>
             }
