--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Report/_StockPartDetailReport.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Report/_StockPartDetailReport.cshtml
@@ -1,7 +1,9 @@
-﻿@model IEnumerable<InventoryTool.Model.vw_MinimumBalance>
+﻿
+@model IEnumerable<InventoryTool.Model.GetStockPartDetailReport_Result>
 @{
     ViewBag.Title = "Products";
 }
+<script src="~/Scripts/Product/Product.js"></script>
 <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="Stylesheet" type="text/css">
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
@@ -9,10 +11,9 @@
     <div id="dvMinBalanceReport">
         <table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblFilterList">
             <thead>
-                <tr>
-                    <th style="text-align:left">Part Code</th>
+                <tr>                  
                     <th style="text-align:left">Name</th>
-                    <th style="text-align:left">Type</th>
+                    @*<th style="text-align:left">Type</th>
                     <th style="text-align:left">Outsource</th>
                     <th style="text-align:left">Category</th>
                     <th style="text-align:left">Color</th>
@@ -20,7 +21,7 @@
                     <th style="text-align:left">Criticality</th>
                     <th style="text-align:left">Unit</th>
                     <th style="text-align:left">Min Quantity</th>
-                    <th style="text-align:left">Balance</th>
+                    <th style="text-align:left">Balance</th>*@
                 </tr>
             </thead>
             <tbody>
@@ -28,14 +29,11 @@
                 {
                     foreach (var data in Model)
                     {
-                        <tr data-Part_Id="@data.Part_Id" data-Part_Code="@data.Part_Code">
-                            <td title="@data.Part_Code">
-                                @data.Part_Code
-                            </td>
+                        <tr data-Part_Id="@data.Part_Id" >                           
                             <td title="@data.Part_Name">
                                 @data.Part_Name
                             </td>
-                            <td title="@data.Part_Type">
+                            @*<td title="@data.Part_Type">
                                 @data.Part_Type
                             </td>
                             <td title="@data.Outsource_Type">
@@ -61,7 +59,7 @@
                             </td>
                             <td title="@data.Balance_Quantity">
                                 @data.Balance_Quantity
-                            </td>
+                            </td>*@
                         </tr>
                     }
                 }
