--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -60,7 +60,7 @@
                     </td>                    
                     <td style="width:2%">
                         <a href="@Url.Action("StockPartDetailReport", "Report", new { Part_Id = Convert.ToString(data.Part_Id) })" class="clsEditbudgetsummary">  
-                            <span class="glyphicon glyphicon-pencil" style="padding-left:10px"></span>
+                            <span class="glyphicon glyphicon-list-alt" style="padding-left:10px"></span>
                         </a>
                     </td>
                  </tr>
