--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/UnAuthorize.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/UnAuthorize.cshtml
@@ -1,9 +1,24 @@
-﻿@model HandleErrorInfo
+﻿@*@model HandleErrorInfo
 
 @{
     ViewBag.Title = "UnAuthorize";
 }
 
 <h1 class="text-danger">Un-Authorize</h1>
-<h2 class="text-danger">You do not have access permission on this page</h2>
+<h2 class="text-danger">You do not have access permission on this page</h2>*@
 
+
+@{
+    ViewBag.Title = "UnAuthorize";
+}
+<link href="~/Content/custom-css/custome.css" rel="stylesheet" />
+
+<h2 style="margin-top:32px;text-align: center;">Access Request</h2>
+<h3 style="margin-top:41px;margin-right:10%; margin-left:10%; font-size:21px"> You are not authorized to access this tool.If you want to use this tool,please send email with proper business justification and we will review it.</h3>
+<label style="margin-top:41px;margin-left:10%;margin-bottom:80px">Send email to Tool Admin</label>
+
+
+<button style="margin-right:70%;margin-top:36px" onclick="window.location.href ='mailto:Tylerw@microsoft.com ?cc=v-simdav@microsoft.com;v-saub@microsoft.com  & subject=WDG Budget Tool Access Request & body=Message'"
+        type="button" class="btn btn-primary btn-sm find_btn accordion-toggle">
+    Send Email
+</button>
