--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/UnAuthorize.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/UnAuthorize.cshtml
@@ -18,7 +18,7 @@
 <label style="margin-top:41px;margin-left:10%;margin-bottom:80px">Send email to Tool Admin</label>
 
 
-<button style="margin-right:70%;margin-top:36px" onclick="window.location.href ='mailto:Tylerw@microsoft.com ?cc=v-simdav@microsoft.com;v-saub@microsoft.com  & subject=WDG Budget Tool Access Request & body=Message'"
+<button style="margin-right:70%;margin-top:36px" onclick="window.location.href ='mailto:mayankaggarwal.cse@gmail.com ?cc=steck032@gmail.com  & subject=Inventory Tool Access Request & body=Message'"
         type="button" class="btn btn-primary btn-sm find_btn accordion-toggle">
     Send Email
 </button>
