--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Report/_MinBalanceReport.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Report/_MinBalanceReport.cshtml
@@ -6,6 +6,7 @@
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
 <div class="container" style="margin-top:23px">
+    <label style="margin-left:30px;">Minimum Balance Report</label><br />
     <div id="dvMinBalanceReport">
         <table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblFilterList">
             <thead>
