--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_LoginPartial.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,22 @@
-﻿@if (Request.IsAuthenticated)
+﻿@using Microsoft.AspNet.Identity
+@if (Request.IsAuthenticated)
 {
-    <text>
-        @{
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    {
+        @Html.AntiForgeryToken()
 
-            var fullname = InventoryTool.UI.Helper.UserHelper.GetFullName(User);
-
-        }
-        <input type="hidden" id="hdnUserName" value="@User.Identity.Name" />
-        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-            <span class="glyphicon glyphicon-user" id="image" style="float: right;"></span>
-            <span class="Userspan" title="@fullname">@fullname</span>  
-        </a>
-       
-    </text>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
+    }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        @*<li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+        @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
+        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
