--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_AddCustomer.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_AddCustomer.cshtml
@@ -4,70 +4,70 @@
             <label>Customer Details</label>
             @Html.TextBox("Customer_Id", "-1", new { @class = "clsCustomer_Id form-control", @style = "float:right; display:none;" })
         </div>
-        <br />     
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Code</label>
             @Html.TextBox("Customer_Code", "", new { @class = "clsCustomer_Code form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Name</label>
-            @Html.TextBox("Customer_Name", "", new { @class = "clsCustomer_Name form-control", @style = "float:right;" })           
+            @Html.TextBox("Customer_Name", "", new { @class = "clsCustomer_Name form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Contact No</label>
             @Html.TextBox("Contact_No", "", new { @class = "clsContact_No form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Email</label>
             @Html.TextBox("Email", "", new { @class = "clsEmail form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+      
+        <div style="margin-top:12px;">
             <label>Address 1</label>
             @Html.TextBox("Address1", "", new { @class = "clsAddress1 form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+      
+        <div style="margin-top:12px;">
             <label>Address 2</label>
             @Html.TextBox("Address2", "", new { @class = "clsAddress2 form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+      
+        <div style="margin-top:12px;">
             <label>City</label>
             @Html.TextBox("City", "", new { @class = "clsCity form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+      
+        <div style="margin-top:12px;">
             <label>State</label>
             @Html.TextBox("State", "", new { @class = "clsState form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Pin Code</label>
             @Html.TextBox("PinCode", "", new { @class = "clsPinCode form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+      
+        <div style="margin-top:12px;">
             <label>Tin No</label>
             @Html.TextBox("TinNo", "", new { @class = "clsTinNo form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Vat No</label>
             @Html.TextBox("VatNo", "", new { @class = "clsVatNo form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Note</label>
             @Html.TextBox("Note", "", new { @class = "clsNote form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <a href="#" id="btnAddUpdateCustomer" class="saveButton">Save</a>
-            <a href="#" id="btnCancelButton" class="cancelButton" style="float:right;">Cancel</a>            
+            <a href="#" id="btnCancelButton" class="cancelButton" style="float:right;">Cancel</a>
         </div>
     </div>
 </div>
