--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
@@ -6,23 +6,20 @@
 <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="Stylesheet" type="text/css">
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
-<div role="tabpanel" class="tab-pane active" id="Customer">
-    <div class="container">
-            <div class="panel panel-default" style="margin-bottom:25px; margin-top:23px">
-                <div style="margin-top:1%">
-                    <label style="margin-left:30px;">Customer</label><br />
-                    <div id="divDisplayCustomerMessages">
-                    </div>
-                    <div id="dvCustomerList" style="width:650px; float:left;">
-                        @Html.Partial("_CustomerList", Model)
-                    </div>
-                    <div id="divCustomerDetail" style="float:right;">
-                        @Html.Partial("_AddCustomer", Model)
-                    </div>
-                </div>
-            </div>
+<div role="tabpanel" class="tab-pane active" id="Customer">   
+    <div class="container" style="margin-top:23px">
+        <label style="margin-left:30px;">Customer</label><br />
+        <div id="divDisplayCustomerMessages">
+        </div>
+        <div id="dvCustomerList" style="width:650px; float:left;">
+            @Html.Partial("_CustomerList", Model)
+        </div>
+        <div id="divCustomerDetail" style="float:right;">
+            @Html.Partial("_AddCustomer", Model)
+        </div>
     </div>
 </div>
+   
 
 <script type="text/javascript">
    
