--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/_AddSupplier.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/_AddSupplier.cshtml
@@ -4,68 +4,68 @@
             <label>Supplier Details</label>
             @Html.TextBox("Supplier_Id", "-1", new { @class = "clsSupplier_Id form-control", @style = "float:right; display:none;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Code</label>
             @Html.TextBox("Supplier_Code", "", new { @class = "clsSupplier_Code form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Name</label>
             @Html.TextBox("Supplier_Name", "", new { @class = "clsSupplier_Name form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Contact No</label>
             @Html.TextBox("Contact_No", "", new { @class = "clsContact_No form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+       
+        <div style="margin-top:12px;">
             <label>Email</label>
             @Html.TextBox("Email", "", new { @class = "clsEmail form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Address 1</label>
             @Html.TextBox("Address1", "", new { @class = "clsAddress1 form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+    
+        <div style="margin-top:12px;">
             <label>Address 2</label>
             @Html.TextBox("Address2", "", new { @class = "clsAddress2 form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>City</label>
             @Html.TextBox("City", "", new { @class = "clsCity form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+    
+        <div style="margin-top:12px;">
             <label>State</label>
             @Html.TextBox("State", "", new { @class = "clsState form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Pin Code</label>
             @Html.TextBox("PinCode", "", new { @class = "clsPinCode form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Tin No</label>
             @Html.TextBox("TinNo", "", new { @class = "clsTinNo form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+    
+        <div style="margin-top:12px;">
             <label>Vat No</label>
             @Html.TextBox("VatNo", "", new { @class = "clsVatNo form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <label>Note</label>
             @Html.TextBox("Note", "", new { @class = "clsNote form-control", @style = "float:right;" })
         </div>
-        <br />
-        <div>
+     
+        <div style="margin-top:12px;">
             <a href="#" id="btnAddUpdateSupplier" class="saveButton">Save</a>
             <a href="#" id="btnCancelButton" class="cancelButton" style="float:right;">Cancel</a>
         </div>
