--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/SupplierIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Supplier/SupplierIndex.cshtml
@@ -6,23 +6,20 @@
 <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="Stylesheet" type="text/css">
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
-<div role="tabpanel" class="tab-pane active" id="Supplier">
-    <div class="container">
-        <div class="panel panel-default" style="margin-bottom:25px; margin-top:23px">
-            <div style="margin-top:1%">
-                <label style="margin-left:30px;">Supplier</label><br />
-                <div id="divDisplaySupplierMessages">
-                </div>
-                <div id="dvSupplierList" style="width:650px; float:left;">
-                    @Html.Partial("_SupplierList", Model)
-                </div>
-                <div id="divSupplierDetail" style="float:right;">
-                    @Html.Partial("_AddSupplier", Model)
-                </div>
-            </div>
+<div role="tabpanel" class="tab-pane active" id="Supplier">  
+    <div class="container" style="margin-top:23px">
+        <label style="margin-left:30px;">Supplier</label><br />
+        <div id="divDisplaySupplierMessages">
+        </div>
+        <div id="dvSupplierList" style="width:650px; float:left;">
+            @Html.Partial("_SupplierList", Model)
+        </div>
+        <div id="divSupplierDetail" style="float:right;">
+            @Html.Partial("_AddSupplier", Model)
         </div>
     </div>
 </div>
+    
 
 <script type="text/javascript">
 
