Update security table

--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
@@ -7,7 +7,7 @@
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
 <div role="tabpanel" class="tab-pane active" id="Customer">   
-    <div class="container" style="margin-top:23px">
+    <div class="container panel panel-default" style="margin-top:23px">
         <label style="margin-left:30px;">Customer</label><br />
         <div id="divDisplayCustomerMessages">
         </div>
