--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -34,16 +34,16 @@
                             <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
                             <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
                             <li>@Html.ActionLink("Customer", "CustomerIndex", "Customer")</li>
-                            @*<li>@Html.ActionLink("Supplier", "SupplierIndex", "Supplier")</li>*@
+                            <li>@Html.ActionLink("Supplier", "SupplierIndex", "Supplier")</li>
                         </ul>
                     </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
-                    @*<li class="dropdown">
+                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Report<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Min Balance", "MinBalanceReport", "Report")</li>                            
                         </ul>
-                    </li>*@   
+                    </li>   
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
